--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -217,7 +217,7 @@
       line-height: 1.214;
       color: $primary-text-color;
       text-transform: uppercase;
-      transform: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
       &:hover,
       &:focus {
