--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -2,7 +2,13 @@
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
-  width: 320px;
+  width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
 }
 
 @media screen and (min-width: 728px) {
