--- a/src/sass/layout/_guarantees.scss
+++ b/src/sass/layout/_guarantees.scss
@@ -51,10 +51,10 @@
     & .container::before {
       content: '';
       position: absolute;
+      top: 100px;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 83%;
       background-color: $secondary-bg-color;
       z-index: -10;
     }
